--- a/main.ui
+++ b/main.ui
@@ -23,6 +23,12 @@
       <height>41</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>导入名单</string>
     </property>
@@ -35,6 +41,12 @@
       <width>181</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>点名</string>
@@ -49,6 +61,12 @@
       <height>41</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>旷课</string>
     </property>
@@ -62,48 +80,78 @@
       <height>41</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>打开名单</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="name">
+   <widget class="QTextBrowser" name="studentName">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>170</y>
+      <x>120</x>
+      <y>180</y>
       <width>256</width>
-      <height>51</height>
+      <height>41</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QTextBrowser" name="class_2">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>250</y>
-      <width>256</width>
-      <height>51</height>
-     </rect>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="id">
+   <widget class="QTextBrowser" name="studentClass">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>330</y>
+      <x>120</x>
+      <y>240</y>
       <width>256</width>
-      <height>51</height>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="studentID">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>300</y>
+      <width>256</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>140</y>
-      <width>81</width>
-      <height>18</height>
+      <x>60</x>
+      <y>180</y>
+      <width>51</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>姓名</string>
@@ -112,11 +160,17 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>230</y>
-      <width>81</width>
-      <height>18</height>
+      <x>60</x>
+      <y>240</y>
+      <width>51</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>班级</string>
@@ -125,11 +179,17 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>310</y>
-      <width>81</width>
-      <height>18</height>
+      <x>60</x>
+      <y>300</y>
+      <width>51</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>学号</string>
@@ -138,11 +198,16 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>430</x>
+      <x>450</x>
       <y>170</y>
       <width>256</width>
       <height>192</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+     </font>
     </property>
    </widget>
   </widget>
