--- a/main.ui
+++ b/main.ui
@@ -36,7 +36,7 @@
    <widget class="QPushButton" name="RollCall">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>30</x>
       <y>400</y>
       <width>181</width>
       <height>41</height>
@@ -55,7 +55,7 @@
    <widget class="QPushButton" name="Absenteeism">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>30</x>
       <y>450</y>
       <width>181</width>
       <height>41</height>
@@ -71,32 +71,13 @@
      <string>旷课</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="OpenList">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>10</y>
-      <width>181</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>宋体</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>打开名单</string>
-    </property>
-   </widget>
    <widget class="QTextBrowser" name="studentName">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>180</y>
+      <x>80</x>
+      <y>190</y>
       <width>256</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -104,15 +85,22 @@
       <family>宋体</family>
       <pointsize>12</pointsize>
      </font>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'宋体'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;justify&quot; style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="studentClass">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>80</x>
       <y>240</y>
       <width>256</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -125,10 +113,10 @@
    <widget class="QTextBrowser" name="studentID">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>300</y>
+      <x>80</x>
+      <y>290</y>
       <width>256</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -141,10 +129,10 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>180</y>
+      <x>20</x>
+      <y>190</y>
       <width>51</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -160,10 +148,10 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>20</x>
       <y>240</y>
       <width>51</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -179,10 +167,10 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>300</y>
+      <x>20</x>
+      <y>290</y>
       <width>51</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -198,16 +186,129 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>170</y>
-      <width>256</width>
-      <height>192</height>
+      <x>350</x>
+      <y>190</y>
+      <width>431</width>
+      <height>301</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>宋体</family>
+      <pointsize>12</pointsize>
      </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <column>
+     <property name="text">
+      <string>姓名</string>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="textAlignment">
+      <set>AlignLeading|AlignVCenter</set>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>班级</string>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="textAlignment">
+      <set>AlignLeading|AlignVCenter</set>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>学号</string>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="textAlignment">
+      <set>AlignLeading|AlignVCenter</set>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>点名情况</string>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="textAlignment">
+      <set>AlignLeading|AlignVCenter</set>
+     </property>
+    </column>
+   </widget>
+   <widget class="QPushButton" name="Sort">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>500</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>按学号排序</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SaveData">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>500</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>保存点名记录</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="OpenData">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>500</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>宋体</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>打开点名记录</string>
     </property>
    </widget>
   </widget>
@@ -217,7 +318,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>29</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
